feat: implement fee APIs
